# pydantic-jsonschema-with-vscode-example

./: .pre-commit-config.yaml  README.rst  pyproject.toml  schema.json  util.py
config/: app-config-auto-completaion-demo.yaml
pydantic_jsonschema_auto_completion/: __init__.py  config.py  user.py
tests/: test_pydantic_jsonschema_auto_completion.py
