[tool.poetry]
name = "pydantic-jsonschema-auto-completion"
version = "0.1.0"
description = ""
authors = ["Isekai-Seikatsu <brian@zuso.tw>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
